kube_service/ingress/akom-ingress/nginx-ingress-controller-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nginx-ingress-controller
spec:
  replicas: 1
  revisionHistoryLimit: 3
  template:
    metadata:
      labels:
        app: nginx-ingress-lb
    spec:
      terminationGracePeriodSeconds: 60
      serviceAccount: nginx
      containers:
        - name: nginx-ingress-controller
          image: quay.io/kubernetes-ingress-controller/nginx-ingress-controller:0.9.0
          imagePullPolicy: Always
          readinessProbe:
            httpGet:
              path: /healthz
              port: 10254
              scheme: HTTP
          livenessProbe:
            httpGet:
              path: /healthz
              port: 10254
              scheme: HTTP
            initialDelaySeconds: 10
            timeoutSeconds: 5
          args:
            - /nginx-ingress-controller
            - --default-backend-service=$(POD_NAMESPACE)/default-backend
            - --configmap=$(POD_NAMESPACE)/nginx-ingress-controller-conf
            - --apiserver-host=https://master.cloud.com
            - --kubeconfig=/var/lib/kubelet/kubeconfig
            - --v=2
          ports:
            - containerPort: 80
            - containerPort: 18080
          volumeMounts:
            - mountPath: /export/kubecertificate/certs/
              name: certs
              readOnly: true
            - mountPath: /var/lib/kubelet/
              name: kubeletcert
              readOnly: true
      volumes:
      - hostPath:
          path: /export/kubecertificate/certs/
        name: certs
      - hostPath:
          path: /var/lib/kubelet/
        name: kubeletcert
